--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "start": "node src/index.mjs"
+    "start:serial": "node src/serial.mjs",
+    "start:stt": "node src/speech-to-text.mjs"
   },
   "dependencies": {
+    "@picovoice/cheetah-node": "^2.1.2",
+    "@picovoice/pvrecorder-node": "^1.2.6",
     "serialport": "^13.0.0"
   }
 }
