--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@picovoice/cheetah-node": "^2.1.2",
     "@picovoice/orca-node": "^1.0.2",
     "@picovoice/pvrecorder-node": "^1.2.6",
+    "play-sound": "^1.1.6",
     "serialport": "^13.0.0"
   }
 }
